--- a/templates/pkl/home.html
+++ b/templates/pkl/home.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img src="/static/img/logo.png" >
+                    <img src="/static/img/sekolah.png" >
                     <div class="card-body">
                         <h5 class="card-title"> Data Sekolah </h5>
                         <a href="" class="btn btn-primary w-100 ">Sekolah</a>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img src="/static/img/logo.png" >
+                    <img src="/static/img/siswa.png" >
                     <div class="card-body">
                         <h5 class="card-title"> Data Siswa </h5>
                         <a href="{% url 'siswa:siswa' %}" class="btn btn-primary w-100 ">Siswa</a>
@@ -35,9 +35,9 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img src="/static/img/logo.png" >
+                    <img src="/static/img/median.png" >
                     <div class="card-body">
-                        <h5 class="card-title"> Data Sekolah </h5>
+                        <h5 class="card-title"> Data Perusahaan </h5>
                         <a href="" class="btn btn-primary w-100 ">Sekolah</a>
                     </div>
                 </div>
