membuat isi home sekolah,dan menambah urls sekolah di nav

--- a/templates/pkl/home.html
+++ b/templates/pkl/home.html
@@ -20,7 +20,7 @@
                     <img src="/static/img/logo.png" >
                     <div class="card-body">
                         <h5 class="card-title"> Data Sekolah </h5>
-                        <a href="" class="btn btn-primary w-100 ">Sekolah</a>
+                        <a href="{% url 'sekolah:sekolah' %}" class="btn btn-primary w-100 ">Sekolah</a>
                     </div>
                 </div>
             </div>
