--- a/templates/pkl/perusahaan.html
+++ b/templates/pkl/perusahaan.html
@@ -1,12 +1,50 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css'%}">
 </head>
+
 <body>
-    <h1> Hello </h1>
+  <nav class="navbar navbar-expand bg-dark">
+    <a href="" class="navbar-brand">Siswa</a>
+    <a href="{% url 'sekolah:sekolah' %}" class="navbar-brand">Sekolah</a>
+    <a href="" class="navbar-brand">Perusahaan</a>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">No</th>
+              <th scope="col">NISN</th>
+              <th scope="col">Nama Siswa</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for x in Perusahaan %}
+            <tr>
+              <th scope="row">1</th>
+              <td>{{ x.Email }}</td>
+              <td>{{ x.Nama }}</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+
+      <script src="{% static 'bootstrap/js/bootstrap.min.js'%}"></script>
 </body>
+
 </html>
