--- a/templates/pkl/sekolah.html
+++ b/templates/pkl/sekolah.html
@@ -23,14 +23,14 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'siswa:siswa' %}">Siswa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Perusahaan</a>
+                <a class="nav-link" href="{% url 'perusahaan:perusahaan' %}">Perusahaan</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
-    <div class="container mt-3">
+    <div class="container mt-5">
     <div class="row">
         <div class="">
         <table class="table table-light table-hover table-striped">
