Nav bar perusahaan

--- a/templates/pkl/siswa.html
+++ b/templates/pkl/siswa.html
@@ -23,12 +23,13 @@
             <a class="nav-link active" aria-current="page" href="{% url 'sekolah:sekolah' %}">Sekolah</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Perusahaan</a>
+            <a class="nav-link" href="{% url 'perusahaan:perusahaan' %}">Perusahaan</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
 
   <div class="container">
     <div class="row">
