--- a/templates/pkl/sekolah.html
+++ b/templates/pkl/sekolah.html
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'siswa:siswa' %}">Siswa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Perusahaan</a>
+                <a class="nav-link" href="{% url 'perusahaan:perusahaan' %}">Perusahaan</a>
               </li>
             </ul>
           </div>
