--- a/templates/pkl/perusahaan.html
+++ b/templates/pkl/perusahaan.html
@@ -11,26 +11,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid mt-2 mb-1">
-            <a class="navbar-brand" href="{% url 'perusahaan:perusahaan' %}">Perusahaan</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'sekolah:sekolah' %}">Sekolah</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'siswa:siswa' %}">Siswa</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    
+    {% include 'pkl/layout/nav.html' %}
 
     <div class="container mt-5">
         <div class="row">
