--- a/templates/pkl/layout/nav.html
+++ b/templates/pkl/layout/nav.html
@@ -1,22 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid mt-2 mb-1">
+    <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+
+        <div class="collapse navbar-collapse" id="navbarButtonsExample">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'sekolah:sekolah' %}">Sekolah</a>
+                    <a class="nav-link" href="{% url 'sekolah:sekolah' %}">Sekolah</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'siswa:siswa' %}">Siswa</a>
+                    <a class="nav-link" href="{% url 'siswa:siswa' %}">Siswa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'perusahaan:perusahaan' %}">Perusahaan</a>
+                    <a class="nav-link" href="{% url 'perusahaan:perusahaan' %}">Perusahaan</a>
                 </li>
             </ul>
+            <div class="d-flex align-items-center">
+                <a href="/admin/" class="btn btn-primary me-3">Admin</a>
         </div>
     </div>
 </nav>
