--- a/templates/pkl/siswa.html
+++ b/templates/pkl/siswa.html
@@ -20,16 +20,16 @@
         <table class="table table-light table-hover table-striped">
           <thead>
             <tr>
-              <th scope="col">No</th>
-              <th scope="col">NISN</th>
-              <th scope="col">Nama Siswa</th>
-              <th scope="col">Jenis Kelamin</th>
-              <th scope="col">Email</th>
-              <th scope="col">No HP</th>
-              <th scope="col">Asal Sekolah</th>
-              <th scope="col">Alamat</th>
-              <th scope="col">Tempat Lahir</th>
-              <th scope="col">Tanggal Lahir</th>
+              <th scope="col" class="text-center">No</th>
+              <th scope="col" class="text-center">NISN</th>
+              <th scope="col" class="text-center">Nama Siswa</th>
+              <th scope="col" class="text-center">Jenis Kelamin</th>
+              <th scope="col" class="text-center">Email</th>
+              <th scope="col" class="text-center">No HP</th>
+              <th scope="col" class="text-center">Asal Sekolah</th>
+              <th scope="col" class="text-center">Alamat</th>
+              <th scope="col" class="text-center">Tempat Lahir</th>
+              <th scope="col" class="text-center">Tanggal Lahir</th>
             </tr>
           </thead>
           <tbody>
