--- a/templates/pkl/home.html
+++ b/templates/pkl/home.html
@@ -38,7 +38,7 @@
                     <img src="/static/img/median.png" >
                     <div class="card-body">
                         <h5 class="card-title"> Data Perusahaan </h5>
-                        <a href="{% url 'perusahaan:perusahaan' %}" class="btn btn-primary w-100 ">Sekolah</a>
+                        <a href="{% url 'perusahaan:perusahaan' %}" class="btn btn-primary w-100 ">Perusahaan</a>
                     </div>
                 </div>
             </div>
