--- a/templates/pkl/perusahaan.html
+++ b/templates/pkl/perusahaan.html
@@ -41,7 +41,7 @@
                             <td>{{ x.alamat }}</td>
                             <td>{{ x.nama_pic }}</td>
                             <td>{{ x.jabatan }}</td>
-                            <td>{{ x.no_telp }}</td>
+                            <td>{{ x.no_tlp }}</td>
                             <td>{{ x.email }}</td>
                         </tr>
                         {% endfor %}
